<resources>
    <string name="app_name">FITCO</string>
    <string name="whatsapp_not_installed">It was not possible to open WhatsApp.</string>


    <string name="launcher_name">@string/app_name</string>
    <string name="activity_name">@string/launcher_name</string>
    <string name="loading">Loading...</string>
    <string name="alert">Alert!</string>
    <string name="no_connection">No internet connection.</string>
    <string name="ok">Ok</string>
    <string name="hello">Hello</string>

    <string name="validation">Validation!</string>
    <string name="invalid_email">Invalid email.</string>
    <string name="coming_soon">Coming soon.</string>
    <string name="confirmation">Confirmation</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="video_wait">Wait...</string>
    <string name="info_fitco">Strategic commercial\npartner of the main\nproducers of raw\nmaterial fertilizers.</string>
    <string name="address_fitco">Alameda Rio Negro, 585 Cj.131\n Torre Jaçari - Bloco A\n Alphaville - Barueri/SP - Brazil\n Cep: 06454-000</string>
    <string name="fone_fitco">(+55) 11 4208-5353</string>
    <string name="fax_fitco">Fax: (+55) 11 4208-2739</string>
    <string name="email_fitco">contact@fitco.com.br</string>
    <string name="fitco">FITCO\n Tradecom do Brasil</string>
    <string name="tradecom_fitco">A FITCO Tradecom do Brasil</string>
    <string name="tradecom_desc_fitco">Strategic commercial partner of the main producers of fertilizers and raw materials has its head office located in Alphaville, in the city of Barueri, state of São Paulo, Brazil. FITCO Tradecom do Brasil is nowadays one of the leaders in the fertilizer segment in terms of supplying products to the Brazilian industry of fertilizers.</string>
    <string name="international_fitco">A FITCO International S.A.</string>
    <string name="international_desc_fitco">International supplier of raw materials for fertilizer end use. Being a company specialized in trading and distributing fertilizers, FITCO International S.A. has a large knowledge in the Brazilian and South American Agro Business sector, offering excellence in providing services for its clients bringing agility and new options of suppliers, as well as, innovation in the negotiations..</string>
    <string name="main_fitco">FITCO International is a Company whose mission is to support Agro Business in Brazilian Markets and other countries of South America, providing services of international trading, excellence in the performance of its services in international logistics and marketing, getting its products directly from the world´s leading producers of fertilizer raw materials.\nFITCO aims to optimize the distribution of fertilizers combining local sales force and producing sources, up to final delivery to final consumers which are the mixers of the raw materials, having a wide area of expertise in various exporting countries, as: Russia, Ukraine, South Korea, Arabian Gulf, Tunisia, United States, Members of the Europe Union and importers as countries of South America, among them we highlight Brazil, Argentina, Uruguay, Chile, Colombia and Peru, as well as acting strongly in the international logistics and chartering, therefore selling on CFR basis to our customers and long term business partners.\nFITCO International is able to offer a trading and logistics service package, as well, as market strategies implementation and commercial actions together with the producers and their partners.\nOur Associated Companies have a strong logistical capacity, providing the possibility of offering imported products already admitted to their own warehouses in the countries where it operates.\nOur success in marketing fertilizer products, is based on our values, dedication, responsibility, due to compliance with our contractual obligations to supplying and trading, in addition to specific and knowledge of the markets in which we operate consequently generating strongly alliances built with the participation of different producers and a wide customers portifolio.\nOur Values are: \nRespect \nIntegrity \nResponsibility \nCooperation \nRespect to the needs of our customers with integrity and responsibility in the negotiations \nOur Vision:\nBeing a Trade Company recognize and respect by our customers, suppliers, business partners and employees, like a prosperous and creative company , marketing and developing high quality products for a correct agricultural and technical nutrition of industrial use, expanding in its area of operation in which it already supplies markets in Brazil and abroad with sustainable and profitable development to members and business partners, customers and suppliers.\nYour Fertilizer supplier and partner"</string>

    <string name="see_more">See More</string>
    <string name="see_more_underline"><u>See More </u></string>
    <string name="news">News</string>
    <string name="contact">Contact</string>
    <string name="weekly_reports">Weekly Reports</string>
    <string name="main_activities">MAIN ACTIVITIES</string>
    <string name="about">About</string>
    <string name="about_us">ABOUT US</string>
    <string name="product">Product</string>
    <string name="products">Products</string>
    <string name="weekly_prices">Weekly Prices</string>
    <string name="buy">Buy</string>
    <string name="dollar">Dollar</string>
    <string name="euro">Euro</string>
    <string name="price_before">Price before</string>
    <string name="price_now">Price now</string>
    <string name="more_detail">More Detail</string>
    <string name="date">Date</string>
    <string name="average_price">Average price</string>
    <string name="empty_feed">No results found.</string>
    <string name="password">Password</string>

</resources>
